crates/backends/rlx-mlx-sys/src/ffi.rs

// RLX — versatile ML compiler + runtime.
// Copyright (C) 2026 Eugene Hauptmann, Nataliya Kosmyna.
// SPDX-License-Identifier: MIT OR Apache-2.0

//! Raw `extern "C"` bindings to the C++ shim in cpp/rlx_mlx_shim.cpp.
//!
//! This module deliberately stays small and mechanical — it mirrors
//! the header one-for-one. Higher-level RAII and ergonomic wrappers
//! live in `array` / `ops`.

use std::ffi::{c_char, c_float, c_int};
use std::os::raw::c_void;

#[repr(C)]
pub struct mlx_array_t {
    _private: [u8; 0],
}

// Mirror rlx_mlx_dtype_t in the header. MLX has native dtypes for
// every variant rlx-ir declares, so the mapping is total.
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum MlxDtype {
    F32 = 0,
    F16 = 1,
    BF16 = 2,
    I32 = 3,
    F64 = 4,
    I8 = 5,
    I16 = 6,
    I64 = 7,
    U8 = 8,
    U32 = 9,
    Bool = 10,
}

// Mirror rlx_mlx_unary_t.
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum MlxUnary {
    Relu = 0,
    Sigmoid = 1,
    Tanh = 2,
    Exp = 3,
    Log = 4,
    Sqrt = 5,
    Rsqrt = 6,
    Neg = 7,
    Abs = 8,
    Erf = 9,
    Round = 10,
    Sin = 11,
    Cos = 12,
    Tan = 13,
    Atan = 14,
    Reciprocal = 15,
    Floor = 16,
    Ceil = 17,
    Sign = 18,
    Softplus = 19,
    Elu = 20,
    HardSwish = 21,
    HardSigmoid = 22,
    Mish = 23,
    Softsign = 24,
    LogSigmoid = 25,
}

// Mirror rlx_mlx_reduce_t.
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum MlxReduce {
    Sum = 0,
    Mean = 1,
    Max = 2,
    Min = 3,
    Prod = 4,
}

// Mirror rlx_mlx_mask_t.
#[repr(C)]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum MlxMask {
    None = 0,
    Causal = 1,
    Sliding = 2,
    Custom = 3,
}

pub const RLX_MLX_OK: c_int = 0;

unsafe extern "C" {
    pub fn rlx_mlx_last_error() -> *const c_char;
    pub fn rlx_mlx_set_last_error(msg: *const c_char);
    pub fn rlx_mlx_version() -> *const c_char;
    pub fn rlx_mlx_device_name() -> *const c_char;

    pub fn rlx_mlx_array_from_data(
        shape: *const c_int,
        ndim: usize,
        data: *const c_float,
        nelems: usize,
        dtype: MlxDtype,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_array_from_data_view(
        shape: *const c_int,
        ndim: usize,
        data: *mut c_void,
        nbytes: usize,
        dtype: MlxDtype,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_array_from_bytes(
        shape: *const c_int,
        ndim: usize,
        data: *const c_void,
        nbytes: usize,
        dtype: MlxDtype,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_array_to_bytes(
        h: *mut mlx_array_t,
        dst: *mut c_void,
        dst_cap: usize,
        out_nbytes: *mut usize,
    ) -> c_int;

    #[allow(dead_code)]
    pub fn rlx_mlx_dtype_size(dtype: MlxDtype) -> usize;

    pub fn rlx_mlx_array_free(h: *mut mlx_array_t);
    pub fn rlx_mlx_array_clone(h: *mut mlx_array_t, out: *mut *mut mlx_array_t) -> c_int;

    pub fn rlx_mlx_array_shape(
        h: *mut mlx_array_t,
        out_shape: *mut c_int,
        cap: usize,
        out_ndim: *mut usize,
    ) -> c_int;

    pub fn rlx_mlx_array_to_f32(h: *mut mlx_array_t, dst: *mut c_float, nelems: usize) -> c_int;

    pub fn rlx_mlx_eval(handles: *const *mut mlx_array_t, n: usize) -> c_int;
    pub fn rlx_mlx_async_eval(handles: *const *mut mlx_array_t, n: usize) -> c_int;
    pub fn rlx_mlx_synchronize() -> c_int;

    pub fn rlx_mlx_op_matmul(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_solve(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_metal_kernel_dispatch(
        name: *const std::os::raw::c_char,
        source: *const std::os::raw::c_char,
        header: *const std::os::raw::c_char,
        input_names: *const *const std::os::raw::c_char,
        n_inputs: usize,
        output_name: *const std::os::raw::c_char,
        inputs: *const *mut mlx_array_t,
        output_shape: *const std::os::raw::c_int,
        output_rank: usize,
        output_dtype: MlxDtype,
        grid_x: c_int,
        grid_y: c_int,
        grid_z: c_int,
        tg_x: c_int,
        tg_y: c_int,
        tg_z: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_add(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_fmod(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_bitand(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_bitor(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_bitxor(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_shl(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_shr(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_atan2(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_mul(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_sub(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_div(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_softmax(
        a: *mut mlx_array_t,
        axis: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_gelu(a: *mut mlx_array_t, out: *mut *mut mlx_array_t) -> c_int;
    pub fn rlx_mlx_op_silu(a: *mut mlx_array_t, out: *mut *mut mlx_array_t) -> c_int;
    pub fn rlx_mlx_op_cast(
        a: *mut mlx_array_t,
        dtype: MlxDtype,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_layernorm(
        x: *mut mlx_array_t,
        gamma: *mut mlx_array_t,
        beta_or_null: *mut mlx_array_t,
        eps: c_float,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_max(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_min(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_pow(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_eq(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_ne(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_lt(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_le(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_gt(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_op_ge(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_where(
        cond: *mut mlx_array_t,
        x: *mut mlx_array_t,
        y: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_unary(
        a: *mut mlx_array_t,
        kind: MlxUnary,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_reshape(
        a: *mut mlx_array_t,
        new_shape: *const c_int,
        ndim: usize,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_transpose(
        a: *mut mlx_array_t,
        perm: *const c_int,
        ndim: usize,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_slice(
        a: *mut mlx_array_t,
        start: *const c_int,
        stop: *const c_int,
        ndim: usize,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_concat(
        arrays: *const *mut mlx_array_t,
        n: usize,
        axis: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_broadcast_to(
        a: *mut mlx_array_t,
        shape: *const c_int,
        ndim: usize,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_take(
        a: *mut mlx_array_t,
        indices: *mut mlx_array_t,
        axis: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_reduce(
        a: *mut mlx_array_t,
        kind: MlxReduce,
        axes: *const c_int,
        n_axes: usize,
        keep_dim: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_cumsum(
        a: *mut mlx_array_t,
        axis: c_int,
        exclusive: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_cumprod(
        a: *mut mlx_array_t,
        axis: c_int,
        exclusive: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_cummax(
        a: *mut mlx_array_t,
        axis: c_int,
        exclusive: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_fft(
        a: *mut mlx_array_t,
        inverse: c_int,
        norm_tag: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_rmsnorm(
        x: *mut mlx_array_t,
        gamma: *mut mlx_array_t,
        eps: c_float,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_attention(
        q: *mut mlx_array_t,
        k: *mut mlx_array_t,
        v: *mut mlx_array_t,
        scale: c_float,
        mask_kind: MlxMask,
        mask_or_null: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_conv2d(
        input: *mut mlx_array_t,
        weight: *mut mlx_array_t,
        stride_h: c_int,
        stride_w: c_int,
        pad_h: c_int,
        pad_w: c_int,
        dil_h: c_int,
        dil_w: c_int,
        groups: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_conv1d(
        input: *mut mlx_array_t,
        weight: *mut mlx_array_t,
        stride: c_int,
        padding: c_int,
        dilation: c_int,
        groups: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_conv3d(
        input: *mut mlx_array_t,
        weight: *mut mlx_array_t,
        stride_d: c_int,
        stride_h: c_int,
        stride_w: c_int,
        pad_d: c_int,
        pad_h: c_int,
        pad_w: c_int,
        dil_d: c_int,
        dil_h: c_int,
        dil_w: c_int,
        groups: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_conv_transpose2d(
        input: *mut mlx_array_t,
        weight: *mut mlx_array_t,
        stride_h: c_int,
        stride_w: c_int,
        pad_h: c_int,
        pad_w: c_int,
        dil_h: c_int,
        dil_w: c_int,
        out_pad_h: c_int,
        out_pad_w: c_int,
        groups: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
